Adds dropdown feature
- Adds dropdown when signed-in, with title as user email
- Moves sign-out to dropdown
- Moves change-password to dropdown
- Adds selection for game stats to dropdown (no functionality)

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -39,11 +39,6 @@ h4 {
   justify-content: center;
 }
 
-.navbar-text {
-  color: red;
-  font-size: 15px
-}
-
 .sign-up-display {
   display: flex;
   flex-direction: column;
@@ -81,7 +76,7 @@ h4 {
 .game-button {
   align-self: center;
   margin: 5px;
-  width: 35vh;
+  width: 150px;
 }
 
 .hidden {
