--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -6,6 +6,7 @@ $cell-border: #fff;
 $title-color: #f00;
 $form-title-font: #616161;
 $button-color: #d3d3d3;
+$gameboard-elements: #000;
 
 
 body {
@@ -24,8 +25,8 @@ header {
 }
 
 main {
-  color: $title-color;
   align-items: center;
+  color: $title-color;
   display: flex;
   flex-direction: column;
   height: 75vh;
@@ -41,10 +42,10 @@ main {
 
 .cell {
   align-items: center;
-  background-color: white;
-  color: black;
-  border-bottom: 5px black;
-  border-right: 5px black;
+  background-color: $background-color;
+  border-bottom: 5px $gameboard-elements;
+  border-right: 5px $gameboard-elements;
+  color: $gameboard-elements;
   display: flex;
   font-family: 'ZCOOL KuaiLe', cursive;
   font-size: 12vh;
@@ -56,9 +57,9 @@ main {
   display: flex;
   flex-wrap: wrap;
    > div {
-    width: calc(100%/3);
-    border-right: 1px solid;
     border-bottom: 1px solid;
+    border-right: 1px solid;
+    width: calc(100%/3);
      &:nth-child(3n){
        border-right: 0;
      }
@@ -72,7 +73,6 @@ h4 {
   color: $font-color;
   margin-top: 10px;
 }
-
 
 .sign-up-display {
   color: $form-title-font;
@@ -99,8 +99,8 @@ h4 {
 .submit {
   background-color: $button-color;
   border-radius: 5px;
-  min-height: 35px;
   margin: 5px 10px;
+  min-height: 35px;
 }
 
 .swap-form-display {
@@ -116,11 +116,11 @@ h4 {
 }
 
 .game-button {
+  background-color: $button-color;
+  border-radius: 5px;
   margin-bottom: 56px;
   padding-bottom: 0 3px;
   width: 150px;
-  border-radius: 5px;
-  background-color: $button-color;
 }
 
 .hidden {
