--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -8,6 +8,7 @@ $form-title-text: #616161;
 $button-background: #d3d3d3;
 $button-text: #000;
 $gameboard-elements: #000;
+$blink-color: #faa;
 
 body {
   background-color: $background-color;
@@ -18,6 +19,10 @@ body {
 button {
   background-color: $button-background;
   color: $button-text;
+}
+
+.blink {
+  text-shadow: 0 0 .5px $blink-color;
 }
 
 header {
